--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -42,8 +42,8 @@ about:
   summary: 'cnmaps is a python package that make drawing China maps more easily. '
   description: |
     cnmaps is a python package that make drawing China maps more easily. 
-  license: MIT
-  license_family: MIT
+  license: BSD
+  license_family: BSD
   license_file: LICENSE
   dev_url: https://github.com/Clarmy/cnmaps
 
