--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -42,7 +42,7 @@ about:
   summary: 'cnmaps is a python package that make drawing China maps more easily. '
   description: |
     cnmaps is a python package that make drawing China maps more easily. 
-  license: BSD
+  license: BSD-3-Clause
   license_family: BSD
   license_file: LICENSE
   dev_url: https://github.com/Clarmy/cnmaps
