--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,7 +11,7 @@ source:
 
 build:
   script: {{ PYTHON }} -m pip install . -vv
-  number: 0
+  number: 1
   noarch: python
 
 requirements:
@@ -37,7 +37,7 @@ test:
   requires:
     - pip
   commands:
-    - pip check
+    - pip list
 
 about:
   home: https://github.com/Clarmy/cnmaps
