Update meta.yaml (#13)

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "cnmaps" %}
-{% set version = "1.1.1" %}
+{% set version = "1.1.2" %}
 
 package:
   name: {{ name|lower }}
@@ -7,17 +7,18 @@ package:
 
 source:
   url: https://github.com/Clarmy/cnmaps/archive/refs/tags/{{ version }}.tar.gz
-  sha256: 7d8b065a3507e29761afff12d7cd324eb429310cc5400950d9b4e8084207637c
+  sha256: 209f9de72dfb6111684a7ecff572d89b4d3f88fb57fae5d555a59f3e7378c1a6
 
 build:
   script: {{ PYTHON }} -m pip install . -vv
-  number: 1
+  number: 0
   noarch: python
 
 requirements:
   host:
     - python >=3.8
     - pip
+    - poetry
   run:
     - python >=3.8
     - matplotlib-base
