--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,7 +11,7 @@ source:
 
 build:
   script: {{ PYTHON }} -m pip install . -vv
-  number: 0
+  number: 1
   noarch: python
 
 requirements:
@@ -22,15 +22,15 @@ requirements:
   run:
     - python >=3.8
     - matplotlib-base
-    - Cartopy >=0.20.0
+    - Cartopy >=0.21.0
     - Shapely >=1.8.0,<2.0
-    - numpy
-    - netCDF4
-    - geopandas
-    - Fiona
-    - geojson
-    - orjson
-    - numba
+    - numpy >=1.21.5
+    - netCDF4 >=1.5.8
+    - geopandas >=0.10.2
+    - Fiona >=1.8.20
+    - geojson >=2.5.0
+    - orjson >=3.7.11
+    - numba >=0.56.0
 
 test:
   imports:
